--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -5,16 +5,33 @@
   @if (authStatus()) {
     <p class="status-message">{{ authStatus()!.message }}</p>
   }
+  <div *ngIf="signinError" class="error">
+    {{ signinError }}
+  </div>
 
-  <form class="login-form">
+  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSignin()">
     <label>
       Username
-      <input type="text" placeholder="Enter your username">
+      <input type="text" formControlName="username" placeholder="Enter your username">
+
+      @if (loginForm.get('username')?.invalid && (loginForm.get('username')?.dirty || loginForm.get('username')?.touched)) {
+        <div class="field-error">
+          @if (loginForm.get('username')?.errors?.['required']) { <span>Username is required.</span> }
+          @if (loginForm.get('username')?.errors?.['minlength']) { <span>Must be at least 3 characters.</span> }
+        </div>
+      }
     </label>
     <label>
       Password
-      <input type="password" placeholder="Enter your password">
+      <input type="password" formControlName="password" placeholder="Enter your password">
+
+      @if (loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)) {
+        <div class="field-error">
+          @if (loginForm.get('password')?.errors?.['required']) { <span>Password is required.</span> }
+        </div>
+      }
     </label>
-    <button type="submit">Sign In</button>
+    <button type="submit" [disabled]="loginForm.invalid">Sign In</button>
   </form>
+  <a routerLink="/new-account" class="confirmation-link">Create an Account</a>
 </div>
