I added the ability to login in as an employee.   There is a new property in the application.properties file that holds the email domain for the business.  If the domain matches, it sends it down the path of logging in an employee, otherwise it logs in a customer.

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -19,8 +19,10 @@
         <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
       </svg>
     </a>
-    <span *ngIf="(auth.user$ | async) as user">
-        Hi, {{ user.firstName }} {{ user.lastName }}!
+    <span>
+      @if (auth.user$ | async; as user) {
+        Hi, @if (user.role !== 'Customer') {{{ user.role }} }{{ user.firstName }} {{ user.lastName }}!
+      }
     </span>
 
   </nav>
