I updated the items from the code review, changed the database password to be stored in a .env file that is not synced with git (security reasons), allowed the rest end points to be called from a browser and removed all warnings that were in my project.

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -10,13 +10,13 @@
   <h2>Login</h2>
   <p class="subtitle">Sign in to your account</p>
 
-  @if (signinError) {
+  @if (signInError) {
     <div class="error">
-      {{ signinError }}
+      {{ signInError }}
     </div>
   }
 
-  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSignin()">
+  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSignIn()">
 
     <label>
       Email Address
