--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -3,25 +3,35 @@
   <nav>
     <a routerLink="/menu">Menu</a>
     <a routerLink="/restaurant-info">Restaurant Info</a>
+
     <div class="nav-dropdown">
       <span class="nav-dropdown-toggle">User Tools</span>
+
       <div class="nav-dropdown-menu">
         <a routerLink="/orders">Previous Orders</a>
         <a routerLink="/profile">Profile</a>
         <a routerLink="/login">Login</a>
+        <a routerLink="/new-account">New Account</a>
+        <a routerLink="/manager-login">Manager Login</a>
         <a routerLink="/admin">Admin</a>
       </div>
     </div>
+
     <a routerLink="/cart" class="cart-link" aria-label="Shopping Cart">
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"
+           fill="none" stroke="currentColor" stroke-width="2"
+           stroke-linecap="round" stroke-linejoin="round">
         <circle cx="9" cy="21" r="1"/>
         <circle cx="20" cy="21" r="1"/>
         <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
       </svg>
     </a>
-    <span *ngIf="(auth.user$ | async) as user">
+
+    @if (auth.user$ | async; as user) {
+      <span>
         Hi, {{ user.firstName }} {{ user.lastName }}!
-    </span>
+      </span>
+    }
 
   </nav>
 </header>
